tests/ui/consts/const-eval-array-len-in-impl.stderr
error[E0277]: the trait bound `[(); 0]: Foo` is not satisfied
  --> $DIR/const-eval-array-len-in-impl.rs:14:6
   |
LL |     <[(); 0] as Foo>::foo()
   |      ^^^^^^^ the trait `Foo` is not implemented for `[(); 0]`
   |
   = help: the trait `Foo` is implemented for `[(); 1]`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
